force push local state

--- a/deep_learning_models-oversampling.ipynb
+++ b/deep_learning_models-oversampling.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8e0901ec",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    optimizer = optimizers.Adam(learning_rate=lr)\n",
-    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.AUC(name='auc')])\n",
+    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.F1Score(name='f1')])\n",
     "    return model\n",
     "\n",
     "class VerboseEarlyStopping(EarlyStopping):\n",
@@ -1152,7 +1152,7 @@
     "    tf.random.set_seed(SEED)\n",
     "    tf.keras.utils.set_random_seed(SEED)\n",
     "    model = create_fnn_model(trial)\n",
-    "    early_stop = VerboseEarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "    early_stop = VerboseEarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "    history = model.fit(\n",
     "        X_train_proc, y_train,\n",
     "        validation_data=(X_val_proc, y_val),\n",
@@ -1161,10 +1161,10 @@
     "        verbose=0,\n",
     "        callbacks=[early_stop]\n",
     "    )\n",
-    "    val_auc = max(history.history.get('val_auc', [0]))\n",
-    "    return 1 - val_auc  # Optuna minimizes\n",
+    "    val_f1 = max(history.history.get('val_f1', [0]))\n",
+    "    return val_f1  # Optuna maximizes\n",
     "\n",
-    "study_fnn = optuna.create_study(direction='minimize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
+    "study_fnn = optuna.create_study(direction='maximize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
     "study_fnn.optimize(objective_fnn, n_trials=50, show_progress_bar=True)\n",
     "\n",
     "# Train best FNN model\n",
@@ -1173,7 +1173,7 @@
     "\n",
     "best_params_fnn = study_fnn.best_params\n",
     "best_fnn = create_fnn_model(optuna.trial.FixedTrial(best_params_fnn))\n",
-    "early_stop_final = VerboseEarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "early_stop_final = VerboseEarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "best_fnn.fit(\n",
     "    X_train_proc, y_train,\n",
     "    validation_data=(X_val_proc, y_val),\n",
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "41a1bcb1",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2045,7 @@
     "        model.add(layers.Dropout(dropout))\n",
     "    model.add(layers.Dense(1, activation='sigmoid'))\n",
     "    optimizer = optimizers.Adam(learning_rate=lr)\n",
-    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.AUC(name='auc')])\n",
+    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.F1Score(name='f1')])\n",
     "    return model\n",
     "\n",
     "class VerboseEarlyStopping(EarlyStopping):\n",
@@ -2057,7 +2057,7 @@
     "    tf.random.set_seed(SEED)\n",
     "    tf.keras.utils.set_random_seed(SEED)\n",
     "    model = create_mlp_model(trial)\n",
-    "    early_stop = VerboseEarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "    early_stop = VerboseEarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "    history = model.fit(\n",
     "        X_train_proc, y_train,\n",
     "        validation_data=(X_val_proc, y_val),\n",
@@ -2066,10 +2066,10 @@
     "        verbose=0,\n",
     "        callbacks=[early_stop]\n",
     "    )\n",
-    "    val_auc = max(history.history.get('val_auc', [0]))\n",
-    "    return 1 - val_auc\n",
+    "    val_f1 = max(history.history.get('val_f1', [0]))\n",
+    "    return val_f1\n",
     "\n",
-    "study_mlp = optuna.create_study(direction='minimize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
+    "study_mlp = optuna.create_study(direction='maximize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
     "study_mlp.optimize(objective_mlp, n_trials=50, show_progress_bar=True)\n",
     "\n",
     "# Train best MLP model\n",
@@ -2078,7 +2078,7 @@
     "\n",
     "best_params_mlp = study_mlp.best_params\n",
     "best_mlp = create_mlp_model(optuna.trial.FixedTrial(best_params_mlp))\n",
-    "early_stop_final = VerboseEarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "early_stop_final = VerboseEarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "best_mlp.fit(\n",
     "    X_train_proc, y_train,\n",
     "    validation_data=(X_val_proc, y_val),\n",
