--- a/deep_learning_models.ipynb
+++ b/deep_learning_models.ipynb
@@ -1000,7 +1000,7 @@
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    optimizer = optimizers.Adam(learning_rate=lr)\n",
-    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.AUC(name='auc')])\n",
+    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.F1Score(name='f1')])\n",
     "    return model\n",
     "\n",
     "def objective_fnn(trial):\n",
@@ -1009,7 +1009,7 @@
     "    tf.keras.utils.set_random_seed(SEED)\n",
     "    \n",
     "    model = create_fnn_model(trial)\n",
-    "    early_stop = EarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "    early_stop = EarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "    history = model.fit(\n",
     "        X_train_proc, y_train,\n",
     "        validation_data=(X_val_proc, y_val),\n",
@@ -1019,10 +1019,10 @@
     "        class_weight=class_weight_dict,\n",
     "        callbacks=[early_stop]\n",
     "    )\n",
-    "    val_auc = max(history.history.get('val_auc', [0]))\n",
-    "    return 1 - val_auc  # Optuna minimizes\n",
+    "    val_f1 = max(history.history.get('val_f1', [0]))\n",
+    "    return val_f1  # Optuna maximizes\n",
     "\n",
-    "study_fnn = optuna.create_study(direction='minimize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
+    "study_fnn = optuna.create_study(direction='maximize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
     "study_fnn.optimize(objective_fnn, n_trials=50, show_progress_bar=True)\n",
     "\n",
     "# Train best FNN model\n",
@@ -1031,7 +1031,7 @@
     "\n",
     "best_params_fnn = study_fnn.best_params\n",
     "best_fnn = create_fnn_model(optuna.trial.FixedTrial(best_params_fnn))\n",
-    "early_stop_final = EarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "early_stop_final = EarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "best_fnn.fit(\n",
     "    X_train_proc, y_train,\n",
     "    validation_data=(X_val_proc, y_val),\n",
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "41a1bcb1",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1838,7 @@
     "        model.add(layers.Dropout(dropout))\n",
     "    model.add(layers.Dense(1, activation='sigmoid'))\n",
     "    optimizer = optimizers.Adam(learning_rate=lr)\n",
-    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.AUC(name='auc')])\n",
+    "    model.compile(optimizer=optimizer, loss=losses.BinaryCrossentropy(), metrics=['accuracy', metrics.F1Score(name='f1')])\n",
     "    return model\n",
     "\n",
     "def objective_mlp(trial):\n",
@@ -1847,7 +1847,7 @@
     "    tf.keras.utils.set_random_seed(SEED)\n",
     "    \n",
     "    model = create_mlp_model(trial)\n",
-    "    early_stop = EarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "    early_stop = EarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "    history = model.fit(\n",
     "        X_train_proc, y_train,\n",
     "        validation_data=(X_val_proc, y_val),\n",
@@ -1857,10 +1857,10 @@
     "        class_weight=class_weight_dict,\n",
     "        callbacks=[early_stop]\n",
     "    )\n",
-    "    val_auc = max(history.history.get('val_auc', [0]))\n",
-    "    return 1 - val_auc\n",
+    "    val_f1 = max(history.history.get('val_f1', [0]))\n",
+    "    return val_f1\n",
     "\n",
-    "study_mlp = optuna.create_study(direction='minimize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
+    "study_mlp = optuna.create_study(direction='maximize', sampler=optuna.samplers.TPESampler(seed=SEED))\n",
     "study_mlp.optimize(objective_mlp, n_trials=50, show_progress_bar=True)\n",
     "\n",
     "# Train best MLP model\n",
@@ -1869,7 +1869,7 @@
     "\n",
     "best_params_mlp = study_mlp.best_params\n",
     "best_mlp = create_mlp_model(optuna.trial.FixedTrial(best_params_mlp))\n",
-    "early_stop_final = EarlyStopping(monitor='val_auc', patience=5, mode='max', restore_best_weights=True)\n",
+    "early_stop_final = EarlyStopping(monitor='val_f1', patience=5, mode='max', restore_best_weights=True)\n",
     "best_mlp.fit(\n",
     "    X_train_proc, y_train,\n",
     "    validation_data=(X_val_proc, y_val),\n",
